--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,15 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <style>
+        .errorlist {
+            text-decoration: none;
+            color: red;
+            list-style-type: none;
+            padding: 0px;
+        }
+    </style>
+    {%block style%}{%endblock%}
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -117,10 +126,13 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="{%static 'js/scripts.js'%}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
     <script src="{% static 'assets/demo/chart-area-demo.js'%}"></script>
-    <script src="{%static 'assets/demo/chart-bar-demo.js'%}"></script>
+    <script src="{%static 'assets/demo/chart-bar-demo.js'%}"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="{%static 'js/datatables-simple-demo.js'%}"></script>
+     
+    {%block script%} {%endblock%}
+      
 </body>
 </html>
