Add login, logout, book stocks, error pags.

--- a/ModBookApp/templates/ModBookApp/add_new.html
+++ b/ModBookApp/templates/ModBookApp/add_new.html
@@ -7,11 +7,12 @@
                 <div class="card-header"><h5 class="text-center font-weight-light my-4">Add New Book</h5></div>
                 <div class="card-body">
 
-                    <form method="post" enctype="multipart/form-data">
+                    <form method="post" enctype="multipart/form-data" novalidate>
                         {%csrf_token%}
                         <div class="form-floating mb-3">
                             {{form.title}}
                             <label for="">{{form.title.label}}</label>
+                            {{form.errors.title}}
                         </div>
                         <div class="row mb-3">
                             <div class="col-md-6">
@@ -71,6 +72,11 @@
                             {{form.tags}}
                             <label for="">{{form.tags.label}}</label>
                         </div>
+                        <div class="form-floating mb-3">
+                            {{book_stock_form.total_books}}
+                            <label for="">{{book_stock_form.total_books.label}}</label>
+                        </div>
+
                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                             <button type="submit" class="btn btn-primary">Add</button>
                         </div>
