--- a/ModStudentApp/templates/ModStudentApp/add_student.html
+++ b/ModStudentApp/templates/ModStudentApp/add_student.html
@@ -7,7 +7,7 @@
                 <div class="card-header"><h5 class="text-center font-weight-light my-4">Borrow Book</h5></div>
                 <div class="card-body">
                      
-                    <form method="post" enctype="multipart/form-data">
+                    <form method="post" enctype="multipart/form-data" novalidate>
                         {%csrf_token%}
 
                          
