--- a/ModBookApp/templates/ModBookApp/update_book.html
+++ b/ModBookApp/templates/ModBookApp/update_book.html
@@ -78,7 +78,7 @@
                         </div>
 
                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                            <button type="submit" class="btn btn-primary">Add</button>
+                            <button type="submit" class="btn btn-primary">Update</button>
                         </div>
                     </form>
                 </div>
