--- a/ModBorrowApp/templates/ModBorrowApp/add_borrow.html
+++ b/ModBorrowApp/templates/ModBorrowApp/add_borrow.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card mt-5">
-                <div class="card-header"><h5 class="text-center font-weight-light my-4">Borrow Book</h5></div>
+                <div class="card-header"><h5 class="text-center font-weight-light">Borrow Book</h5></div>
                 <div class="card-body">
                     {% if form.errors %}
                     {% for field in form %}
