--- a/ModStudentApp/templates/ModStudentApp/index.html
+++ b/ModStudentApp/templates/ModStudentApp/index.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card mt-5">
-                <div class="card-header"><h5 class="font-weight-light my-4">Borrow Book List</h5></div>
+                <div class="card-header"><h5 class="font-weight-light">Borrow Book List</h5></div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table">
