--- a/ModStudentApp/templates/ModStudentApp/student_list.html
+++ b/ModStudentApp/templates/ModStudentApp/student_list.html
@@ -5,8 +5,19 @@
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card shadow-lg border-5 mt-5">
-                <div class="card-header"><h5 class="text-center font-weight-light my-4">Book List</h5></div>
+                <div class="card-header"><h5 class="text-center font-weight-light">Student List</h5></div>
                 <div class="card-body">
+                    <div class="message-box">
+                        {%if messages%}
+                        {%for message in messages%}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            {{message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {%endfor%}
+                        {%endif%}
+
+                    </div>
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
@@ -24,13 +35,15 @@
                                 {%for student in students_list%}
                                 <tr>
                                     <td>{{forloop.counter}}</td>
-                                    <td><img src="/media/{{student.user_cover}}" style="width:50px"/></td>
+                                    <td><img src="/media/{{student.user_cover}}" style="width:50px" /></td>
                                     <td>{{student.first_name}}</td>
                                     <td>{{student.last_name}}</td>
                                     <td>{{student.email}}</td>
                                     <td>{{student.phone}}</td>
                                     <td>
-                                        <a href="{%url 'student_card' student.id%}" class="btn btn-dark btn-sm">Card</a>
+                                        <a href="{%url 'student_update' student.id%}"><i class="fa fa-edit text-black"></i></a>
+                                        <a href="{%url 'student_delete' student.id%}" onclick="return confirm('Are you sure?')"><i class="fa fa-trash text-black"></i></a>
+                                        <a href="{%url 'student_card' student.id%}" class=""><i class="fa fa-id-card text-black"></i></a>
                                         <!--<a href="" class="btn btn-primary btn-sm">view</a>-->
                                     </td>
                                 </tr>
