--- a/ModStudentApp/templates/ModStudentApp/update_student.html
+++ b/ModStudentApp/templates/ModStudentApp/update_student.html
@@ -6,53 +6,42 @@
             <div class="card mt-5">
                 <div class="card-header"><h5 class="text-center font-weight-light">Borrow Book</h5></div>
                 <div class="card-body">
-                     
+                    {{form.errors}}
                     <form method="post" enctype="multipart/form-data" novalidate>
                         {%csrf_token%}
-
-                         
                         <div class="row mb-3">
                             <div class="col-md-6">
                                 <div class="form-floating mb-3 mb-md-0">
                                     {{form.first_name}}
                                     <label for="">{{form.first_name.label}}</label>
-                                    {{form.errors.first_name}}
                                 </div>
                             </div>
-
                             <div class="col-md-6">
                                 <div class="form-floating mb-3 mb-md-0">
                                     {{form.last_name}}
                                     <label for="">{{form.last_name.label}}</label>
-                                    {{form.errors.last_name}}
                                 </div>
                             </div>
-
                         </div>
-
                         <div class="form-floating mb-3">
                             {{form.email}}
                             <label for="">{{form.email.label}}</label>
                             {{form.errors.email}}
                         </div>
-
                         <div class="form-floating mb-3">
                             {{form.phone}}
                             <label for="">{{form.phone.label}}</label>
                             {{form.errors.phone}}
                         </div>
-
                         <div class="form-floating mb-3">
                             {{form.photo}}
                             <!--<label for="">{{form.photo.label}}</label>-->
                         </div>
-
                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                            <button type="submit" class="btn btn-primary">Add</button>
+                            <button type="submit" class="btn btn-primary">Update</button>
                         </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
